--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family:sans-serif;
 }
 body{
  background-color: #e3e3e3;
